# sproogeek

./: .env.example  .gitignore  DEPLOY.md  LICENSE.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: _build-image.yml  build-dev.yml  deploy-production.yml
backend/: .dockerignore  .env  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1c2d3e4f5a6b_use_bigint_for_print_canvas_file_size.py  2f8a9c6d1e4b_add_vk_profile_to_users.py  (+11 more)
backend/app/: database.py  main.py
docs/: S3_STORAGE.md  api.md  architecture.md  deployment.md  development.md  examples.md  usage.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml  yandex_02c42e193f867aa8.html
frontend/src/: App.jsx  api.js  i18n.js  index.css  main.jsx  seo.js  store.js
microservices/block_builder/: Dockerfile  requirements.txt
microservices/glb-unwrapper/: CMakeLists.txt  Dockerfile  README.md
microservices/glb-unwrapper/server/: go.mod  main.go
microservices/glb-unwrapper/src/: accessor_reader.cpp  accessor_reader.hpp  cli.cpp  cli.hpp  error.hpp  format.cpp  format.hpp  glb_reader.cpp  glb_reader.hpp  json.cpp  json.hpp  main.cpp  print_kit.cpp  print_kit.hpp  uv_exporter.cpp  uv_exporter.hpp
microservices/renderer/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js
microservices/techcard/: .dockerignore  Dockerfile  requirements.txt
microservices/unwrap/: Dockerfile  requirements.txt
(+165 files in other folders)
